# sonar-1

./: flake.nix  package.json
nix/: moduel.nix  notes.txt
nix/bots/: generate.sh  node-packages-generated.nix  node-packages.nix
nix/cli/: generate.sh  node-packages-generated.nix  node-packages.nix
nix/server/: generate.sh  node-packages-generated.nix  node-packages.nix  package-without-bots.json  package.json  supplement.json  supplement.nix
nix/sonar-tantivy/: Cargo.toml  install-extra.js
sonar-client/lib/: client.js
sonar-client/test/: sync.js
sonar-core/lib/: island.js
sonar-core/test/: basic.js
sonar-server/routes/: api.js
sonar-ui/src/pages/: Islands.js
