[[bin]]
name = "sonar-tantivy"
path = "src-rust/main.rs"

[package]
name = "sonar-tantivy"
version = "0.2.14"
authors = [ "Franz Heinzmann (Frando) <frando@unbiskant.org>",]
edition = "2018"
repository = "https://github.com/arso-project/sonar-tantivy"

[dependencies]
log = "^0.4"
uuid = "^0.7"
failure = "^0.1"
varinteger = "^1.0"
once_cell = "^0.2"

[dev-dependencies]
tempdir = "^0.3"

[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy.git"
rev = "7e08e0047bf842d2ce0f9cd7791451bffb85e2f6"

[dependencies.serde_json]
version = "=1.0.56"
features = [ "preserve_order",]

[dependencies.serde]
version = "=1.0.118"
features = [ "derive",]

[dependencies.toshi-query]
git = "https://github.com/arso-project/Toshi.git"
branch = "toshi-query-tantivymaster"
